--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,4 @@
 sources:
   cosmic-osd-epoch-1.0.0-alpha.5.1.tar.gz: 6e0773dbb7d2ab8e38e4a333866750124f1f65c3
-  vendor.tar.xz: 542e982e9ee5436684b634953960b224b4f49b8f
+  vendor.tar.xz: d46e1d6a4f9a0f7112014eff2438c9bcd8b610ff
+  cosmic-osd-epoch-1.0.0-alpha.6.tar.gz: f08c860a7d7bb88dcf278b9cd741007363e45bc9
