--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  cosmic-osd-epoch-1.0.0-alpha.7.tar.gz: a3613431a4b5b8440a3df2df80fc597a34c3e58b
-  vendor.tar.xz: ace9e631c592d51322caf894805c9b36a101aee1
+  cosmic-osd-epoch-1.0.0-beta.1.tar.gz: 98ef52cd4d0109d6dd75a1622e1eec06f2c73065
+  vendor.tar.xz: 805c82af0d92f610dc9c1a9d6aeb04487d96dfb4
