--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  cosmic-osd-epoch-1.0.0-beta.7.tar.gz: f5e84dd473f523a994849b5a25fa831abf0a518b
-  vendor.tar.xz: 8bca437a3f67d6ed27e450728787646e583af3d7
+  cosmic-osd-epoch-1.0.2.tar.gz: 95e03e75dcba4e556eed90340812cfb4f92afb35
+  vendor.tar.xz: e87dca79268782ef59338c073727872128a31b28
